--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ coil-kt-coil-compose = "2.4.0"
 kotlin = "1.9.0"
 hilt = "2.48"
 ksp = "1.9.0-1.0.13"
+firebase = "4.4.0"
 
 activity-compose = "1.8.2"
 androidx-junit = "1.1.5"
@@ -18,11 +19,12 @@ kotlinx-coroutines = "1.7.3"
 lifecycle-runtime-ktx = "2.7.0"
 lifecycle-viewmodel-compose = "2.7.0"
 logging-interceptor = "4.9.3"
-material3 = "1.1.2"
+material3 = "1.2.0-rc01"
 navigation-compose = "2.7.6"
 paging-runtime-ktx = "3.2.1"
 retrofit = "2.9.0"
 bom = "2024.01.00"
+firebase-bom = "32.7.1"
 room-runtime = "2.6.1"
 
 [libraries]
@@ -42,9 +44,10 @@ compose-ui = { module = "androidx.compose.ui:ui" }
 compose-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling-preview" }
 compose-ui-tooling-debug = { module = "androidx.compose.ui:ui-tooling" }
-androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
+androidx-material3 = { module = "androidx.compose.material3:material3-android", version.ref = "material3" }
 
 compose-bom = { module = "androidx.compose:compose-bom", version.ref = "bom" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom"}
 
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt-android" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt-compiler" }
@@ -85,3 +88,4 @@ android-application = { id = "com.android.application", version.ref = "android-a
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
+firebase = { id = "com.google.gms.google-services", version.ref = "firebase"}
